# test

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  build-windows.yml  generate_index
.github/workflows/: build-windows.yml  build.yml
src/: main.cpp  test.cpp
